# geotochka-sketch-to-dxf

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.bat  start.sh
app/: __init__.py  main.py  models.py
app/services/: __init__.py  dxf_export.py  image_processing.py
app/static/: app.js  index.html  styles.css
tests/: test_api.py  test_dxf_export.py  test_image_processing.py
